<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:contentDescription="@string/option_menu_cd"
    android:orientation="vertical">

    <Button
        android:id="@+id/create"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:drawableLeft="@drawable/ic_edit_"
        android:drawablePadding="@dimen/dimen_20dp"
        android:contentDescription="@string/create_new_script_cd"
        android:fontFamily="@font/roboto"
        android:gravity="left|center_vertical"
        android:text="@string/create_new_script"
        android:textAllCaps="false"
        android:textColor="@color/secondary_text"
        android:drawableStart="@drawable/ic_edit_" />

    <Button
        android:id="@+id/upload"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_file_upload"
        android:drawablePadding="@dimen/dimen_20dp"
        android:contentDescription="@string/upload_new_script_cd"
        android:fontFamily="@font/roboto"
        android:gravity="left|center_vertical"
        android:text="@string/upload_from_gallery"
        android:textAllCaps="false"
        android:textColor="@color/secondary_text"
        android:drawableLeft="@drawable/ic_file_upload" />

</LinearLayout>
