<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:contentDescription="@string/home_ccd"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_scripts"
        android:contentDescription="@string/scripts_list_cd"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_new"
        android:layout_width="@dimen/dimen_56dp"
        android:layout_height="@dimen/dimen_56dp"
        android:contentDescription="@string/add_new_cript_cd"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/dimen_16dp"
        app:srcCompat="@drawable/ic_add"
        tools:ignore="VectorDrawableCompat" />

</RelativeLayout>